--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -111,15 +111,15 @@
                                                     <li class="menu-item-has-children htl1">
                                                         <a href="#url"><span class="child_parent_spn">SIHANOUKVILLE</span></a>
                                                         <ul class="subcontent-menu htls1">
-                                                            <li><a href="http://3.65.240.125/independence-hotel/">Independence Hotel</a></li>
+                                                            <li><a href="https://independence-hotel.vercel.app/">Independence Hotel</a></li>
                                                         </ul>
                                                     </li>
 
                                                     <li class="menu-item-has-children htl2">
                                                         <a href="#url"><span class="child_parent_spn">phnom penh</span></a>
                                                         <ul class="subcontent-menu htls2">
-                                                            <li><a href="http://3.65.240.125/dara-airport-city-hotel/">DARA AIRPORT CITY HOTEL & SPA</a></li>
-                                                            <li><a href="http://3.65.240.125/olympia-city-hotel/">OLYMPIA CITY HOTEL</a></li>
+                                                            <li><a href="https://dara-airport-city-hotel.vercel.app/">DARA AIRPORT CITY HOTEL & SPA</a></li>
+                                                            <li><a href="https://olympia-city-hotel.vercel.app/">OLYMPIA CITY HOTEL</a></li>
                                                             <!-- <li><a href="#url">THE SIXTIES BY DARA - SERVICE APARTMENTS</a></li>
                                                             <li><a href="#url">THE ÉLYSÉE BY DARA - SERVICE APARTMENTS</a></li> 
                                                             <li><a href="#url">TOKYO INN</a></li>-->
