--- a/attractions.html
+++ b/attractions.html
@@ -110,15 +110,15 @@
                                                     <li class="menu-item-has-children htl1">
                                                         <a href="#url"><span class="child_parent_spn">SIHANOUKVILLE</span></a>
                                                         <ul class="subcontent-menu htls1">
-                                                            <li><a href="https://independence-hotel.vercel.app/">Independence Hotel</a></li>
+                                                            <li><a href="https://olympia-city-hotel.vercel.app/" target="_blank">Independence Hotel</a></li>
                                                         </ul>
                                                     </li>
 
                                                     <li class="menu-item-has-children htl2">
                                                         <a href="#url"><span class="child_parent_spn">phnom penh</span></a>
                                                         <ul class="subcontent-menu htls2">
-                                                            <li><a href="https://dara-airport-city-hotel.vercel.app/">DARA AIRPORT CITY HOTEL & SPA</a></li>
-                                                            <li><a href="https://olympia-city-hotel.vercel.app/">OLYMPIA CITY HOTEL</a></li>
+                                                            <li><a href="https://dara-airport-city-hotel.vercel.app/" target="_blank">DARA AIRPORT CITY HOTEL & SPA</a></li>
+                                                            <li><a href="https://olympia-city-hotel.vercel.app/" target="_blank">OLYMPIA CITY HOTEL</a></li>
                                                             <!-- <li><a href="#url">THE SIXTIES BY DARA - SERVICE APARTMENTS</a></li>
                                                             <li><a href="#url">THE ÉLYSÉE BY DARA - SERVICE APARTMENTS</a></li> 
                                                             <li><a href="#url">TOKYO INN</a></li>-->
@@ -383,7 +383,7 @@
                                     <div class="btm_offers_content">
                                         <p>Guests staying at Independence Hotel in Sihanoukville have direct access to a stunning private beach that is
                                             equipped to provide the best comfort, services and amenities to our guests.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -397,7 +397,7 @@
                                     <div class="btm_offers_content">
                                         <p>Our infinity pool has a 45 meter long basin for swimming and a lounging deck and terrace with a bar and
                                             restaurant right by the sea.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -412,7 +412,7 @@
                                     <div class="btm_offers_content">
                                         <p>This is the place for a swim or for unwinding with a cool drink in hand, right behind the reception area.
                                             Lounging chairs and a poolside bar invite you to relax.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -425,7 +425,7 @@
 
                                     <div class="btm_offers_content">
                                         <p>Independence Hotel Resort & Spa offers 3 distinct event halls and meeting rooms catering to all your needs for private and business events and meetings that can hold from 20 to 500 guests.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div> -->
@@ -439,7 +439,7 @@
                                     <div class="btm_offers_content">
                                         <p>Dara properties around Cambodia offer a fully equipped gym and spa so all our guests can keep up with
                                             their fitness routine and have a relaxing time with massage sessions and sauna.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -455,7 +455,7 @@
                                             and outdoor seating, terraces, and decks. It also includes a VIP room. Feast on all-day gourmet snacks, lunch
                                             and dinner a la carte or set menus. Chef Touch and his team’s cuisine centers around the freshest, local
                                             seafood.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -470,7 +470,7 @@
                                         <p>Coral Restaurant is the main indoor restaurant at Independence Hotel Resort & Spa, for your breakfast, lunch
                                             and dinner cravings. Set in the Rotunda, a beautiful example of ‘New Khmer’ architecture, we have
                                             everything your tastebuds need and deserve.</p>
-                                        <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                        <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                     </div>
                                 </div>
                             </div>
@@ -574,7 +574,7 @@
                                          <p>With its unique East-West fusion cuisine, our Jet Coffee Building VIP room hosts happy hours for
                                             up to 38 guests. We also host delicious barbecue events there every Saturday, so come and
                                             discover it for yourself!</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -588,7 +588,7 @@
                                      <div class="btm_offers_content">
                                          <p>Find our signature cocktails, drinks, light meals, and snacks right at our Sky Bar. We serve healthy
                                             drinks and offer a relaxing environment after a session at the nearby gym.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -603,7 +603,7 @@
                                      <div class="btm_offers_content">
                                          <p>With the 20-meter-long swimming pool nearby, Sky Deck Terrace is a large, roofed space on the
                                             5th floor. In the evenings, we offer amazing live music and drinks al fresco there.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -616,7 +616,7 @@
  
                                      <div class="btm_offers_content">
                                          <p>Independence Hotel Resort & Spa offers 3 distinct event halls and meeting rooms catering to all your needs for private and business events and meetings that can hold from 20 to 500 guests.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div> -->
@@ -630,7 +630,7 @@
                                      <div class="btm_offers_content">
                                          <p>A casual coffee shop and bar located in our main lobby, where guests can meet visitors and enjoy
                                             happy hour in a beautifully decorated and well serviced bar.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -724,7 +724,7 @@
                                          <p>At Olympia City Hotel, you can enjoy an exquisitely decorated restaurant, furnished with wood in
                                             neutral tones that promote a relaxing and international cuisine experience while you enjoy our
                                             special selection of drinks and meals with a touch of fresh Cambodian flavors.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -738,7 +738,7 @@
                                      <div class="btm_offers_content">
                                          <p>Beautiful garden in a modern style with seating areas for you to relax and have a great time while
                                             observing the urban hub of Phnom Penh in the comfort of our hotel.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
@@ -754,7 +754,7 @@
                                          <p>Guests can enjoy a relaxing swimming pool while staying at Olympia City Hotel to recharge their
                                             energies after a stressful business day or while staying with family members and loved ones on a
                                             well-deserved staycation or romantic stay.</p>
-                                         <a href="https://independence-hotel.vercel.app/" class="btn_vbt new">VISIT WEBSITE</a>
+                                         <a href="https://olympia-city-hotel.vercel.app/" target="_blank" class="btn_vbt new">VISIT WEBSITE</a>
                                      </div>
                                  </div>
                              </div>
