correction of specific links

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                                       <li class="menu-item-has-children htl1">
                                                           <a href="#url"><span class="child_parent_spn">SIHANOUKVILLE</span></a>
                                                           <ul class="subcontent-menu htls1">
-                                                              <li><a href="https://olympia-city-hotel.vercel.app/" target="_blank">INDEPENDENCE HOTEL</a></li>
+                                                              <li><a href="https://independence-hotel.vercel.app/" target="_blank">INDEPENDENCE HOTEL</a></li>
                                                           </ul>
                                                       </li>
 
